@@ -2,7 +2,6 @@ package io.github.slimefunguguproject.bump.utils;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.annotation.Nonnull;
 
@@ -107,6 +106,6 @@ public final class AppraiseUtils {
 
         return type.getDescription().stream()
             .map(line -> ChatUtil.color(ChatColor.GRAY + line))
-            .collect(Collectors.toList());
+            .toList();
     }
 }
